WAVE Contrast Errors and Alerts Fix

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -60,6 +60,7 @@
 .page__footer-copyright {
   font-family: $global-font-family;
   font-size: $type-size-7;
+  color: #333;
 }
 
 .page__footer-follow {
